--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,3 +8,8 @@
  }
 .main-content h2 {color:#019C86;}
 .main-content h3 {color:black;}
+.main-content hr {
+    height: 1px;
+    margin: 2rem 0;
+    background-color: #333333;
+    }
