--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,8 +2,9 @@
 ---
 
 @import "{{ site.theme }}";
+.project-tagline {display:none;}
 .main-content h2 {color:#019C86;}
-.main-content h3 {color:black;}
+.main-content h3 {color:#666;}
 .main-content hr {
     height: 1px;
     margin: 2rem 0;
