--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,3 +11,5 @@
     background-color: #333333;
     }
 img {border:1px solid #606c71;}
+.page-header {background-color: #019C86; background-image: linear-gradient(120deg, #155799, #019C86);}
+a {text-decoration: underline;}
